# vail-zoomer

./: .gitignore  AUDIO_FIX_SUMMARY.md  LICENSE  LINUX_TESTING_GUIDE.md  README.md  SIGNING.md  create-icon.ps1  diagnose_audio.sh  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  mic_permission.m  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: linux_audio_setup.rs  main.rs
src-tauri/src/audio/: mod.rs  sidetone.rs
src-tauri/src/config/: mod.rs
src-tauri/src/cw/: decoder.rs  mod.rs  timing.rs
src-tauri/src/input/: mod.rs
src-tauri/windows/: hooks.nsh
src/components/main/: OperationalView.tsx  index.ts
src/components/shared/: BigButton.tsx  BigSelect.tsx  CollapsibleSection.tsx  InfoBox.tsx  index.ts
src/components/steps/: Step1KeyerSetup.tsx  Step2VirtualAudio.tsx  Step3AudioSetup.tsx  Step4VideoAppTips.tsx  index.ts
src/components/wizard/: StepIndicator.tsx  WizardLayout.tsx  index.ts
