[package]
name = "vail-zoomer"
version = "0.1.0"
description = "CW sidetone + microphone merger for video conferencing"
authors = ["Brett"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
midir = "0.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
ringbuf = "0.4"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
