[package]
name = "vail-zoomer"
version = "0.2.6"
description = "CW sidetone + microphone merger for video conferencing"
authors = ["Brett"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
midir = "0.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
ringbuf = "0.4"
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
pulsectl-rs = "0.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
